# coututils

./: .gitignore  CMakeLists.txt  README.md  demo.cpp  main.cpp
coututils/: coututils.cpp  coututils.hpp
demo/: demo.cpp
